dataset1235/2025-2/610742602/users/4180041627/executions/677928262_48684178.log
== RUN (2025-08-26 21:17:34)
-- CODE: 
TV= float(input("insira o total"))
L= TV+TV*30/100
print(round(L,2))
      
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total1888.74
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total910.65
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total260.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total585.65
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total716.33
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total2462.19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:17:22)
-- CODE: 
TV= float(input("insira o total"))
L= TV+TV*30/100
print(round(L,2)
      
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 3
    print(round(L,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 3
    print(round(L,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 3
    print(round(L,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 3
    print(round(L,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 3
    print(round(L,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 3
    print(round(L,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:19:06)
-- CODE: 
TV= float(input("insira o total"))
L= TV-TV*30/100
print(round(L,2))
      
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total1017.02
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total490.35
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total140.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total315.35
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total385.71
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total1325.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:20:14)
-- CODE: 
TV= float(input("insira o total"))
L= TV*30/100
print(round(L,2))
      
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:16:26)
-- CODE: 
TV= float(input("insira o total"))
L= TV+TV*30/100
print(round(x,2)
      
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 3
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 3
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 3
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 3
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 3
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 3
    print(round(x,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:20:24)
-- CODE: 
TV= float(input("insira o total"))
L= TV*30/100
print(round(L,2))
      
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
insira o total435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
insira o total210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
insira o total60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
insira o total135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
insira o total165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
insira o total568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
